crates/hwp-core/tests/snapshots/snapshot_tests__table_caption_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
.ps12 {
  text-align:right;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:31.05mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:62.10mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:86.63mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:111.15mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:135.68mm;height:3.53mm;width:0.00mm;"></div></div></div><div class="htG" style="left:30mm;width:94mm;top:35mm;height:31.06mm;"><div class="htb" style="left:10mm;width:74mm;top:16.53mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:10mm;top:10mm;width:74mm;height:3.53mm;overflow:hidden;"><div class="hcI" ><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:3.53mm;width:74mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:3.53mm;"><span class="hrt cs1">1</span></div><span class="hrt cs1">&nbsp;위 캡션</span></div></div></div></div><div class="htG" style="left:30mm;width:94mm;top:66.05mm;height:31.06mm;"><div class="htb" style="left:10mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:10mm;top:17.53mm;width:74mm;height:3.53mm;overflow:hidden;"><div class="hcI" ><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:3.53mm;width:74mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:3.53mm;"><span class="hrt cs1">2</span></div><span class="hrt cs1">&nbsp;아래 캡션</span></div></div></div></div><div class="htG" style="left:30mm;width:127mm;top:97.1mm;height:24.53mm;"><div class="htb" style="left:43mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:10mm;top:10mm;width:30mm;height:4.53mm;overflow:hidden;"><div class="hcI" style="top:0.50mm;"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:4.53mm;width:30mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:4.53mm;"><span class="hrt cs1">3</span></div><span class="hrt cs1">&nbsp;왼쪽</span></div></div></div></div><div class="htG" style="left:30mm;width:127mm;top:121.63mm;height:24.53mm;"><div class="htb" style="left:10mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:87mm;top:10mm;width:30mm;height:4.53mm;overflow:hidden;"><div class="hcI" style="top:0.99mm;"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:4.53mm;width:30mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:4.53mm;"><span class="hrt cs1">4</span></div><span class="hrt cs1">&nbsp;오른쪽</span></div></div></div></div><div class="htG" style="left:30mm;width:127mm;top:146.15mm;height:24.53mm;"><div class="htb" style="left:43mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:10mm;top:10mm;width:30mm;height:4.53mm;overflow:hidden;"><div class="hcI" style="top:0.50mm;"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:4.53mm;width:30mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:4.53mm;"><span class="hrt cs1">5</span></div><span class="hrt cs1">&nbsp;왼쪽 위</span></div></div></div></div><div class="htG" style="left:30mm;width:127mm;top:170.68mm;height:24.53mm;"><div class="htb" style="left:10mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:87mm;top:10mm;width:30mm;height:4.53mm;overflow:hidden;"><div class="hcI" style="top:0.99mm;"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:4.53mm;width:30mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:4.53mm;"><span class="hrt cs1">6</span></div><span class="hrt cs1">&nbsp;오른쪽 아래</span></div></div></div></div><div class="htG" style="left:30mm;width:94mm;top:195.2mm;height:36.7mm;"><div class="htb" style="left:10mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:0mm;top:17.53mm;width:94mm;height:9.17mm;overflow:hidden;"><div class="hcI" ><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:9.17mm;width:93.99mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:9.17mm;"><span class="hrt cs1">7</span></div><span class="hrt cs1">&nbsp;여백까지 확대</span></div><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:5.64mm;height:9.17mm;width:93.99mm;"><span class="hrt cs1">------------------------------------------</span></div></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:196.90mm;height:3.53mm;width:150.00mm;"></div></div></div><div class="htG" style="left:30mm;width:94mm;top:35mm;height:36.7mm;"><div class="htb" style="left:10mm;width:74mm;top:10mm;height:4.53mm;"><svg class="hs" viewBox="-2.5 -2.5 79 9.53" style="left:-2.5mm;top:-2.5mm;width:79mm;height:9.53mm;"><defs></defs><path d="M0,0 L0,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L74.06,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:73.00mm;"></div></div></div></div></div><div class="hcD" style="left:10mm;top:17.53mm;width:74mm;height:9.17mm;overflow:hidden;"><div class="hcI" ><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:0mm;height:9.17mm;width:74mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:9.17mm;"><span class="hrt cs1">8</span></div><span class="hrt cs1">&nbsp;한 줄로 입력</span></div><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0mm;top:5.64mm;height:9.17mm;width:74mm;"><span class="hrt cs1">------------------------------------------</span></div></div></div></div></div></body>

</html>
