crates/hwp-core/tests/snapshots/snapshot_tests__table_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<table class="hwp-table">
<tr>
<td>  </td>
<td>  </td>
<td rowspan="2">  </td>
</tr>
<tr>
<td colspan="2">  </td>
</tr>
</table>
</div>
